ATO-632: Add AuthFrontend Class
Update orchestration-shared/src/main/java/uk/gov/di/orchestration/shared/services/LogoutService.java

Co-Authored-By: Ethan Mills <ethan.mills@digital.cabinet-office.gov.uk>
Co-Authored-By: Hannah Leong <137415037+hannah-leong@users.noreply.github.com>